...
    }
    
    private func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let viewModel = QuizResultsViewModel(
                title: "Раунд окончен",
                text: makeResultsMessage(),
                buttonText: "Сыграть еще раз")
                viewController?.show(quiz: viewModel)
        } else {
            switchToNextQuestion()
            viewController?.showLoadingIndicator()
...
